Setting things up

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./file.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>Weather in Your Area!</title>
+</head>
+
+<body>
+    <header>
+        <div class="header topnav">
+            <h1>Weather in Your Area!</h1>
+            <input type="text" placeholder="Look up your City here!">
+        </div>
+    </header>
+</body>
+
+<main>
+    <div class="currentWeather">
+        <h1>Current Weather:</h1>
+    </div>
+    <div class="sidebar">
+        <div>Day 1</div>
+        <div>Day 2</div>
+        <div>Day 3</div>
+        <div>Day 4</div>
+        <div>Day 5</div>
+    </div>
+    <div class="pastCities">
+        <h1>Past Cities:</h1>
+    </div>
+</main>
+
+
+
+
+</html>
