--- a/index.html
+++ b/index.html
@@ -5,38 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./file.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./weatherAppStyle.css">
     <title>Weather in Your Area!</title>
+    
 </head>
 
 <body>
     <header>
-        <div class="header topnav">
+        <div class="header">
             <h1>Weather in Your Area!</h1>
-            <input type="text" placeholder="Look up your City here!">
+            <div class="topnav">
+                <form>
+                    <label for="city">City:</label>
+                    <input type="text" id="city" name="city">
+                    <button type="submit" id="submit">Search</button>
+                </form>
+            </div>
         </div>
     </header>
+
+    <main>
+        <div class="currentWeather">
+            <h1>Current Weather:</h1>
+        </div>
+        <div class="sidebar">
+            <div>Day 1</div>
+            <div>Day 2</div>
+            <div>Day 3</div>
+            <div>Day 4</div>
+            <div>Day 5</div>
+        </div>
+        <div id="pastCities" class="pastCities">
+            <h1>Past Cities:</h1>
+        </div>
+    </main>
+
+    <script src="./weather.js"></script>
 </body>
-
-<main>
-    <div class="currentWeather">
-        <h1>Current Weather:</h1>
-    </div>
-    <div class="sidebar">
-        <div>Day 1</div>
-        <div>Day 2</div>
-        <div>Day 3</div>
-        <div>Day 4</div>
-        <div>Day 5</div>
-    </div>
-    <div class="pastCities">
-        <h1>Past Cities:</h1>
-    </div>
-</main>
-
-
-
 
 </html>
